# stargen

./: .clang-format  .gitignore  ARCHITECTURAL_ANALYSIS.md  AccretionRecorder.h  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  Config.h  DEBUGGING_NOTES.md  FINAL_REFACTORING_REPORT.md  GLOBAL_REFACTORING_GUIDE.md  Makefile  ObjectPool.h  OrbitalSimulator.cpp  OrbitalSimulator.h  OrbitalStateManager.cpp  OrbitalStateManager.h  PARALLEL_OUTPUT_STATUS.md  PerformanceMonitor.cpp  PerformanceMonitor.h  PlanetRow.h  Planetary_Habitability_Laboratory.cpp  README.md  REFACTORING_REPORT.md  RandomContext.h  SimulationContext.h  StarGenerator.cpp  StarGenerator.h  ThreadPool.h  VIEWER_README.md  Vector3.h  accrete.cpp  accrete.h  add_std_prefix.sh  andromeda.cpp  andromeda.h  andromeda2.cpp  c_structs.h  catalog_loader.cpp  catalog_loader.h  (+47 more)
.github/workflows/: ci.yml  main.yml  spike-gcc16.yml  ubuntu-ci.yml  windows-ci.yml
data/: andromeda2.tsv  elements.yaml  ic3094_2.tsv  jsontoproto.py  omega_galaxy2_pb2.py  ring_universe2_pb2.py  ring_universe_pb2.py
hooks/: pre-commit
research/: Formation of planetary systems by aggregation a computer simulation.md
research/modern/: 00-current-implementation-map.md  01-accretion-and-tidal-dynamics.md  02-eccentricity-damping.md  03-disk-structure-and-snowline.md  04-mass-radius-interior.md  05-composition-condensation.md  06-habitable-zone-climate.md  07-stellar-relations-binaries.md  08-spin-obliquity-validation.md  09-old-source-papers-summary.md  10-greenhouse-Ts-polynomial.md  11-giant-migration.md  README.md
scripts/: validate_population.py  verify.sh
tests/: CMakeLists.txt  accrete_math_test.cpp  determinism_threads_test.cpp  elements_error_test.cpp  enviro_test.cpp  golden_regression.cmake  test_basic.cpp  units_test.cpp
tests/golden/: stargen_seed_12345.txt  stargen_seed_42.txt  stargen_seed_7.txt
